# cv-joint

./: .gitignore  Makefile  README.md  cv-agency.git  cv-agents.git  docs  pyproject.toml  pytest.ini  sample.env  test_job_analyzer.py  tree2pb.sh
data/: backend-dev-cv.json  cover-letter-schema.json  cover-letter.json  cv-draft.yaml  cv-schema.json  cv.json  cv.yaml  library-cv.json
examples/: current.tex  original.tex
output/: cv.tex
scripts/: migrate_optimization_records.py  migrate_step4_optimized_cvs.py
scripts/migrations/: backfill_optimized_cv_path.py  migrate_job_posting_locations.py
src/builder/: builder.py  cli.py  template_env.py
src/config/: root.py  settings.py  settings.yaml
src/connectors/: mcp_manager.py
src/converters/: __init__.py  markdown.py
src/crews/: __init__.py
src/cv_analyzer/: crew.py  main.py
src/infrastructure/: __init__.py  markdown_writer.py  mcp_manager.py
src/job_posting_analyzer/: crew.py  main.py
src/models/: __init__.py  schema.py
src/post_extractor/: __init__.py  extractor.py
src/repositories/: __init__.py  filesystem.py  filesystem_repository.py
src/services/: __init__.py  agency_service.py  application.py  converters.py  exporters.py  knowledge_chat.py  markdown_exporter.py  optimization_service.py  preprocessing.py  schema_export.py
src/shared/: config.py
src/ui/: app.py  cli.py  components.py  gradio_app.py
templates/: cover-letter.tex  cv.tex  upwork-cv.tex
templates/markdown/: curriculum-vitae.md  cv-transformation-plan.md  cv.md  job-posting.md  transformation-plan.md
tests/: conftest.py
(+79 files in other folders)
